# gb-rail-routing

./: Cargo.toml  README.md  output.geojson
src/: csa.rs  main.rs
src/timetable/: footpath.rs  io.rs  location.rs  mod.rs  stop.rs  trip.rs
