[package]
name = "gb-rail-routing"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
geo-types = "0.7.16"
geojson = "0.24.2"
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
